--- a/client/src/css/bodyMain.css
+++ b/client/src/css/bodyMain.css
@@ -1,9 +1,88 @@
 #main-div {
-    width: 100%;
-    height: 100vh;
+  margin-left: 50%;
+  margin-top: 25px;
+  transform: translateX(-50%);
+  width: 50%;
+  height: 60vh;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: flex-start;
+}
 
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: center;
+#tab-div {
+  width: 30%;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  gap: 1rem;
+
+  border-top: 5px solid black;
+  border-left: 5px solid black;
+  border-top-right-radius: 20px;
+  border-right: 5px solid black;
+  border-top-left-radius: 20px;
+
+  background-color: rgba(1, 1, 1, 0.25);
+}
+
+#posts-container-div {
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+  scroll-behavior:  smooth;
+  overflow-x: hidden;
+  display: flex;
+  flex-flow: column nowrap;
+  border: black 5px solid;
+  border-radius: 100px;
+  background-color: rgba(1, 1, 1, 0.25);
+}
+
+/* Dynamically created content */
+.post-container-div {
+  width: 100%;
+  height: 100px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  grid-template-rows: 25% 75%;
+
+}
+
+.post-user-div {
+  height: 100%;
+  width: 100%;
+  grid-column: 1;
+  grid-row: 1 / 3;
+  padding-top: 20px;
+
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-header-div {
+  font-size: 18px;
+  width: 100%;
+  height: 100%;
+  grid-column: 2;
+  grid-row: 1;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.post-content-div {
+  width: 100%;
+  height: 100%;
+  padding: 3.5px;
+  padding-left: 5px;
+  padding-top: 5px;
+  grid-column: 2;
+  grid-row: 2;
 }
