--- a/client/src/css/bodyMain.css
+++ b/client/src/css/bodyMain.css
@@ -8,16 +8,16 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: flex-start;
+  backdrop-filter: blur(10px);
 }
 
 #tab-div {
-  width: 30%;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  width: auto;
+  padding: 5px;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 25px;
 
   border-top: 5px solid black;
   border-left: 5px solid black;
@@ -26,19 +26,21 @@
   border-top-left-radius: 20px;
 
   background-color: rgba(1, 1, 1, 0.25);
+  box-shadow: inset 0px 0px 5px 5px rgba(1, 1, 1, 0.25);
 }
 
 #posts-container-div {
   width: 100%;
   min-height: 100%;
   height: 100%;
-  scroll-behavior:  smooth;
+  scroll-behavior: smooth;
   overflow-x: hidden;
   display: flex;
   flex-flow: column nowrap;
   border: black 5px solid;
   border-radius: 100px;
   background-color: rgba(1, 1, 1, 0.25);
+  box-shadow: inset 0px 0px 20px 20px rgba(1, 1, 1, 0.25);
 }
 
 /* Dynamically created content */
@@ -48,7 +50,6 @@
   display: grid;
   grid-template-columns: 15% 85%;
   grid-template-rows: 25% 75%;
-
 }
 
 .post-user-div {
@@ -56,12 +57,21 @@
   width: 100%;
   grid-column: 1;
   grid-row: 1 / 3;
-  padding-top: 20px;
 
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  border-bottom: black 5px solid;
+  padding: 3.5px;
+  padding-left: 5px;
+}
+
+.post-user-div img {
+    height: 75px;
+    width: 75px;
+    clip-path: circle(50%);
+    background-color: black;
 }
 
 .post-header-div {
@@ -71,10 +81,18 @@
   grid-column: 2;
   grid-row: 1;
 
+  padding-left: 5px;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  gap: 1rem;
+  border-left: black 5px solid;
+  border-bottom: black 5px solid;
+}
+
+.post-header-div span{
+    width: 92.5%;
 }
 
 .post-content-div {
@@ -82,7 +100,16 @@
   height: 100%;
   padding: 3.5px;
   padding-left: 5px;
-  padding-top: 5px;
   grid-column: 2;
   grid-row: 2;
+  border-left: black 5px solid;
+  border-bottom: black 5px solid;
+}
+
+.post-content-div p{
+    width: 97%;
+    height: 100%;
+    margin-left: -5px;
+    margin-top: -1px;
+    padding: 5px;
 }
