--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -1,12 +1,25 @@
-footer{
-    position: fixed;
-    bottom: 0;
-    padding-bottom: px;
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items:center;
-    justify-content: center;
+footer {
+  position: fixed;
+  bottom: 0;
+  padding-bottom: 2.5px;
+  padding-top: 2.5px;
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
 
-    background-color: rgba(1, 1, 1, 0.45);
+  background-color: rgba(1, 1, 1, 0.45);
+  border-top: 5px black solid;
+  box-shadow: inset 0px 0px 5px 5px rgba(1, 1, 1, 0.25);
+  backdrop-filter: blur(10px);
+}
+
+a {
+  text-decoration: none;
+  color: lightskyblue;
+}
+
+a:hover {
+  text-decoration: underline;
 }
